# OSMD_Trainees

coding/arduino/free_rtos_mockups/: free_rtos_mockups.ino
coding/arduino/free_rtos_motors_demo/: free_rtos_motors_demo.ino
coding/arduino/free_rtos_sensors/: free_rtos_sensors.ino
coding/arduino/mockup temperature/: mockup_temperature.ino
coding/arduino/mockup_imu/: mockup_imu.ino
coding/arduino/mockup_temperature/: mockup_temperature.ino
coding/arduino/motors_demo/: motors_demo.ino
coding/arduino/motors_mockup/: motors_mockup.ino
coding/arduino/thread_mockups/: thread_mockups.ino
coding/raspberry/: Bar.py  README.md  bsdf_tri.bsdf  reader_temperature.py  temperature_bar.py  trashy_temp_mockup.py
coding/raspberry/GUI/: Bar.py  IMU.py  imu_widget.py  temperature_bar.py
coding/raspberry/GUI_pat/: Bar.py  IMU.py  Widget.py  bar_pat.py  dashboard.py  run_dashboard.py  slider_pat.py  widget.py
coding/raspberry/bsdf_viewer/: visualizer.py
coding/raspberry/camera/: cam_tester.py  camera_test.py  fake_camera.py  fake_picamera2.py
coding/raspberry/communication/: README.md  mux_tx_rx.py  protocol.py  pyproject.toml
coding/raspberry/communication/ComsModule/: __init__.py
coding/raspberry/communication/protocol/: MessageManager.cpp  MessageManager.h  MessageManagerBindings.cpp
coding/raspberry/communication/pythonprotocol/: MessageManager.py
coding/raspberry/dash_pygame/: README.md  dashboard.py  mockup_sensors.py
coding/raspberry/dash_pyqtgraph/: README.md  common.py  dashboard.py
coding/raspberry/dashboard/: dashboard.py  mockup_encoders.py  (+2 more)
(+44 files in other folders)
